--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        submodules: 'true''
+        submodules: 'true'
 
     - name: Set up Go
       uses: actions/setup-go@v4
